[package]
name = "test_bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
tracing = "0.1"
zerocopy = "0.6.0"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.20.0" }
